--- a/index.html
+++ b/index.html
@@ -581,9 +581,9 @@
 			<br>
 			<br>
 			<div class="row justify-content-center">
-				<div class="col-md-7 ftco-animate text-center">
+<!-- 				<div class="col-md-7 ftco-animate text-center">
 					<h2>Have a<span> Question?  </span> <a href="#" class="btn btn-primary py-3 px-5">Click Here</a> </h2>
-				</div>
+				</div> -->
 			</div>
 				<br>
 					<ul class="ftco-footer-social list-unstyled d-flex justify-content-center align-items-center mb-0">
@@ -601,7 +601,7 @@
 
 
  
-	
+<!-- 	
     <footer class="ftco-footer ftco-section">
 		<div class="container">
 		  <div class="row">
@@ -614,7 +614,7 @@
 		  </div>
 		</div>
 	  </footer>
-
+ -->
 
   <!-- loader -->
   <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00"/></svg></div>
